Venv was broken, Adding actual functionality to mp3 (formerly mp4) loader so that it is useful (not done yet)

--- a/.gitignore
+++ b/.gitignore
@@ -9,9 +9,9 @@
 /TkIDE  
 /.vscode
 #hide distbrution
+
 /dist/TkIDE
-/dist/TkIDE_Setup.exe
 *.iss
-
-
-Gif-Test.gif
+desktop.ini
+sauce.com
+/TkIDE
