check readme, version 1.8

--- a/assets/settings.json
+++ b/assets/settings.json
@@ -1,6 +1,6 @@
 {
     "icon":"./assets/icon.png",
     "file-icon":"./assets/file.png",
+    "image-icon":"./assets/image.png",
     "ImageScaleSize":8
-
 }
