preparing terminal, new venv, moved project to new drive.

--- a/.gitignore
+++ b/.gitignore
@@ -5,14 +5,16 @@
 #pyc files
 *.pyc
 **/__pycache__
+
 #venv
-/venv
+/TKVenv
+
+#vscode config
 /.vscode
 #personal files
 sec*
 
 #hide distbrution
-
 /dist/TkIDE
 *.iss
 desktop.ini
