Working on extensions again. Breaking change. Turn off "extensionsEnabled" in settings to fix.

--- a/assets/settings.json
+++ b/assets/settings.json
@@ -4,5 +4,6 @@
     "image-icon":"./assets/image.png",
     "imageResizeCoeffiecent":8,
     "enableHighlighting":false,
-    "debug":false
+    "debug":false,
+    "extensionsEnabled":true
 }
