--- a/assets/settings.json
+++ b/assets/settings.json
@@ -5,5 +5,6 @@
     "imageResizeCoeffiecent":8,
     "enableHighlighting":false,
     "debug":false,
-    "extensionsEnabled":true
+    "extensionsEnabled":true,
+    "maxExtConnections":10
 }
