--- a/assets/settings.json
+++ b/assets/settings.json
@@ -7,5 +7,8 @@
     "debug":true,
     "extensionsEnabled":true,
     "experimentalExtensions":true,
-    "maxExtConnections":10
+    "maxExtConnections":10,
+    "fileAssociations":{
+        "tabs.ImageTab":["png","gif","jpg","jpeg","ico"]
+    }
 }
